yaml/mlflow/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
      kubernetes.io/ingress.class: "nginx"
  name: mlflow-server-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /mlflow
        pathType: Prefix
        backend:
          service:
            name: mlflow-server-svc
            port:
              number: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow-server-svc-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app: mlflow-server
  ports:
    -
      name: mlflow-server
      port: 5000
      nodePort: 32050
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow-server-svc
  namespace: default
spec:
  type: ClusterIP
  ports:
  - name: port5000
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: mlflow-server
